[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "abtest"
version = "0.1.0"
description = "A small, tested toolkit for designing and analyzing A/B tests on conversion rates."
requires-python = ">=3.10"
dependencies = ["numpy", "scipy"]

[tool.setuptools.packages.find]
where = ["src"]
